--- a/netlify.toml
+++ b/netlify.toml
@@ -4,10 +4,21 @@
 
 [build.environment]
   NODE_VERSION = "18"
+  NEXT_TELEMETRY_DISABLED = "1"
 
-# Ensure Next.js routing works correctly
+# Use the Netlify Next.js plugin
 [[plugins]]
   package = "@netlify/plugin-nextjs"
+  
+# Configure the plugin
+[plugins."@netlify/plugin-nextjs"]
+  # Disable runtime as we're doing static export
+  useRuntime = false
+
+[[redirects]]
+  from = "/*"
+  to = "/404.html"
+  status = 404
 
 [[redirects]]
   from = "/*"
