--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "preview_image_url": "https://imagedelivery.net/wSMYJvS3Xw-n339CbDyDIA/e42eec61-db86-49c8-7b29-c3ed4783e400/public"
   },
   "dependencies": {
-    "next": "14.2.23",
+    "next": "13.4.19",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.2"
@@ -32,7 +32,7 @@
     "wrangler": "3.107.3"
   },
   "scripts": {
-    "build": "next build",
+    "build": "next build && next export -o out",
     "check": "opennextjs-cloudflare && tsc && wrangler deploy --dry-run",
     "deploy": "opennextjs-cloudflare && wrangler deploy",
     "dev": "next dev",
