--- a/package.json
+++ b/package.json
@@ -27,13 +27,16 @@
     "@types/react-dom": "18.3.1",
     "eslint": "8.56.0",
     "eslint-config-next": "14.2.5",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "postcss": "8.4.49",
+    "prettier": "^3.0.0",
     "tailwindcss": "3.4.17",
     "typescript": "5.7.2",
     "wrangler": "3.107.3"
   },
   "scripts": {
-    "build": "next build && next export -o out",
+    "build": "next build",
     "check": "opennextjs-cloudflare && tsc && wrangler deploy --dry-run",
     "deploy": "opennextjs-cloudflare && wrangler deploy",
     "dev": "next dev",
