--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   },
   "dependencies": {
     "contentful": "^11.5.2",
+    "framer-motion": "^12.4.7",
     "next": "13.4.19",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-ga": "^3.3.1",
-    "react-hook-form": "^7.54.2"
+    "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "4.20250204.0",
@@ -34,6 +36,8 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-watch-typeahead": "^2.2.2",
     "postcss": "8.4.49",
     "prettier": "^3.0.0",
     "tailwindcss": "3.4.17",
