--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "preview_image_url": "https://imagedelivery.net/wSMYJvS3Xw-n339CbDyDIA/e42eec61-db86-49c8-7b29-c3ed4783e400/public"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.25.0",
     "contentful": "^11.5.2",
+    "eslint-plugin-jest": "^28.11.0",
+    "eslint-plugin-testing-library": "^7.1.1",
     "framer-motion": "^12.4.7",
     "next": "13.4.19",
+    "nodemailer": "^6.10.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-ga": "^3.3.1",
