--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-testing-library": "^7.1.1",
     "framer-motion": "^12.4.7",
-    "next": "13.4.19",
+    "next": "^14.1.0",
     "nodemailer": "^6.10.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-ga": "^3.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0"
   },
